<resources>
    <string name="app_name">NewFind</string>
    <string name="nothing"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="pick_job_title">选择你偏好的领域</string>
    <string name="pick_company_title">请选择关注的公司</string>
    <string name="before">上一步</string>
    <string name="start">开始使用</string>
    <string name="pick_job_next">下一步</string>
    <string name="test_subscription">摩拜单车</string>
    <string name="test_report">摩拜单车出让10%的股份给一汽，请选择关注的公司膜拜还能做共享汽车</string>
    <string name="test_subscription_sub">"@"摩拜单车</string>
    <string name="test_subscription_time">4小时前</string>
    <string name="test_subscription_content">出让10%的股份给一汽，膜拜还能做共享汽车</string>
    <string name="save">保存</string>
    <string name="email">邮箱</string>
    <string name="email2">邮箱:</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="phone">手机号</string>
    <string name="phone2">手机:</string>
</resources>
