<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:layout_marginTop="2dp"
    >

    <!--<ImageView-->
        <!--android:id="@+id/titleIcon"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="80dp"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:src="@drawable/ic_menu_gallery"-->
        <!--android:text="@string/pick_job_title" />-->
    <com.pwc.newfind.view.CircleImageView
        android:id="@+id/titleIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:src="@drawable/test"
        android:text="@string/pick_job_title"
        app:border_width="0dp"
        android:layout_marginLeft="16dp"
        />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/test_subscription"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/title"
            android:gravity="center_horizontal"
            android:text="@string/test_subscription_sub"
            android:textSize="10sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/darkgrey"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:gravity="left"
                android:text="@string/test_subscription_content"
                android:textSize="12dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/darkgrey"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:text="@string/test_subscription_time"
            android:textSize="10dp"
            android:textColor="@color/darkgrey"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp"/>


    </LinearLayout>
</LinearLayout>