<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/test_subscription"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/source_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="来源:"
        android:textColor="@color/darkgrey"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/source_label"
        android:gravity="center_horizontal"
        android:text="@string/test_subscription_sub"
        android:textColor="@color/darkgrey"
        android:textSize="10sp" />

    <ImageView
        android:id="@+id/favourite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_grade_unselect" />

    <ImageView
        android:id="@+id/pdf"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@id/source"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_picture_as_pdf" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/source"
        android:gravity="center_horizontal"
        android:text="@string/test_subscription_time"
        android:textColor="@color/darkgrey"
        android:textSize="10dp" />
</RelativeLayout>




